# VNS_Python_Dev

./: README.md
day1_python_fundamental/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py
day2_oop/: console_app.py  employee.csv  hrm.txt
day3_crawl_data/: .gitignore  README.md  bongdaplus_crawled.json  requirements.txt
day3_crawl_data/crawl_data/: script.py
day3_crawl_data/utils/: handle_json.py  save_to_csv.py  save_to_db.py
day4-7_fastapi/src/day4/: README.md  main.py  models.py  requirements.txt  schemas.py
day4-7_fastapi/src/day5+6/: .gitignore  README.md  requirements.txt
day4-7_fastapi/src/day7/: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
day8-13_django/: .gitignore
day8-13_django/day10+11/: db.sqlite3
day8-13_django/day10+11/cart/: urls.py
day8-13_django/day10+11/inventory/: tasks.py  (+1 more)
day8-13_django/day12+13/: .dockerignore
day8-13_django/day9/: db.sqlite3
learn/day8-12_django/day12+13/: README.md  config_tests.py  db.sqlite3  docker-compose.yml  pyproject.toml
learn/day8-12_django/day12+13/auth/: apps.py  tests.py  views.py
learn/day8-12_django/day12+13/cart/: tests.py
learn/day8-12_django/day12+13/config/: settings.py
learn/day8-12_django/day12+13/inventory/: admin.py  models.py  serializers.py  signals.py
learn/day8-12_django/day12+13/inventory/migrations/: 0002_productimage.py
learn/day8-12_django/day12+13/orders/: admin.py  tasks.py  tests.py
learn/day8-13_django/day8/: README.md  db.sqlite3  pyproject.toml
learn/day8-13_django/day8/config/: settings.py  urls.py
(+89 files in other folders)
